--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "pnpm --filter @toy-element/play dev"
+    "dev": "pnpm --filter @toy-element/play dev",
+    "docs:dev": "pnpm --filter @toy-element/docs dev",
+    "docs:build": "pnpm --filter @toy-element/docs build",
+    "docs:preview": "pnpm --filter @toy-element/docs preview",
+    "test": "echo 'todo'"
   },
   "keywords": [],
   "author": "",
